--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
@@ -273,7 +273,7 @@
                             + Send Email
                         </div>
                         <div class="delete-img" (click)="sendEmail()">
-                            <img style="height: 1.8em;" src="../assets/png/delete.png">
+                            <img style="height: 1.5em;" src="../assets/icons/x-icon.svg">
                         </div>
                     </header>
                     <section class="text-wrapper" *ngIf="!showTransactionEmail">
@@ -284,7 +284,7 @@
                                     <li class="list-inputs flex flex-align-center"
                                         *ngFor="let data of emailArray;let i = index">
                                         {{data}}<img class="crossmark-icon" (click)='removeData(i)'
-                                            src="../assets/png/delete.png">
+                                            src="../assets/icons/x-icon.svg">
                                     </li>
                                     <input type="text" placeholder="Enter User's Email" [(ngModel)]='queryValue'
                                         (keyup)=filter() class="inputarea-container" formControlName="ename"
