--- a/webapp/src/app/pacman-features/secondary-components/view-all-resources/view-all-resources.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/view-all-resources/view-all-resources.component.html
@@ -26,7 +26,7 @@
         </div>
         <a (click)="closeViewAllModal()" class="close-overlay">
             <div>
-                <img class="close-icon" src="../../assets/png/delete.png">
+                <img class="close-icon" src="../../assets/icons/x-icon.svg">
             </div>
         </a>
         <div class="resource-tiles-container">
