--- a/webapp/src/app/post-login-app/asset-groups/asset-groups.component.html
+++ b/webapp/src/app/post-login-app/asset-groups/asset-groups.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <a *ngIf="!hideCloseButton" (click)="instructParentToCloseAssetGroup()">
                     <div class="delete-title">
-                        <img class="delete-icon" src="../../assets/png/delete.png">
+                        <img class="delete-icon" src="../../assets/icons/x-icon.svg">
                     </div>
                 </a>
             </article>
