--- a/webapp/src/app/post-login-app/common/vuln-report-tables/vuln-report-tables.component.html
+++ b/webapp/src/app/post-login-app/common/vuln-report-tables/vuln-report-tables.component.html
@@ -91,7 +91,7 @@
     <div class='popup-header flex flex-align-center flex-between'>
         <div class='header-title'>{{popupTitle}}</div>
         <div class='cross-img' (click)='detailsPopup = false;'>
-            <img height="27px;" width="27px;" src='../assets/png/delete.png'>
+            <img height="27px;" width="27px;" src='../assets/icons/x-icon.svg'>
         </div>
     </div>
     <div class="flex flex-col flex-grow popup-content" *ngIf="popupTitle == 'Actions to Remediate'">
