--- a/webapp/src/app/post-login-app/common/vuln-report-workflow/vuln-report-workflow.component.html
+++ b/webapp/src/app/post-login-app/common/vuln-report-workflow/vuln-report-workflow.component.html
@@ -21,7 +21,7 @@
  <div class="page-heading">
   Vulnerability Report Calculation Workflow
  </div>
- <img (click)='closeWorkflow()' class='close-imgicon absolute' src='../assets/png/delete.png'>
+ <img (click)='closeWorkflow()' class='close-imgicon absolute' src='../assets/icons/x-icon.svg'>
  <div class="workflow-banner">
   <div class="cloud">
     <span>CLOUD</span>
