--- a/webapp/src/app/post-login-app/common/vuln-trend-graph/vuln-trend-graph.component.html
+++ b/webapp/src/app/post-login-app/common/vuln-trend-graph/vuln-trend-graph.component.html
@@ -78,7 +78,7 @@
     <div class="popup-header flex flex-align-center flex-between">
         <div class="header-title">Vulnerability Trend - <span *ngIf='!editMode'>Add</span><span *ngIf='editMode'>Edit</span> Note</div>
         <div class="cross-img" (click)='openNotesModal=false;'>
-            <img height="27px;" src="../assets/png/delete.png" width="27px;">
+            <img height="27px;" src="../assets/icons/x-icon.svg" width="27px;">
         </div>
     </div>
     <div class='flex flex-col flex-grow flex-between'>
