--- a/webapp/src/app/post-login-app/know-your-dashboard/know-your-dashboard.component.html
+++ b/webapp/src/app/post-login-app/know-your-dashboard/know-your-dashboard.component.html
@@ -17,7 +17,7 @@
         <div class='first-time-head'>
             Get to Know Your Application
         </div>
-        <div> <img (click)='selectedSlide = images.length; checkForLast()' class='delete-icon' src='../../assets/png/delete.png'></div>
+        <div> <img (click)='selectedSlide = images.length; checkForLast()' class='delete-icon' src='../../assets/icons/x-icon.svg'></div>
     </div>
     <div class='image-parent'>
         <div class='image-container flex' [ngStyle]="{'transform': 'translateX(-' + selectedSlide * 100 +'%)'}">
