--- a/webapp/src/app/post-login-app/post-login-app.component.html
+++ b/webapp/src/app/post-login-app/post-login-app.component.html
@@ -44,7 +44,7 @@
       class="nextLevel-close layer-delete-title show-cross"
       (click)="navigateBackToRootLevel()"
     >
-      <img class="layer-delete-icon" src="../../assets/png/delete.png" />
+      <img class="layer-delete-icon" src="../../assets/icons/x-icon.svg" />
     </a>
     <div class="opaque-layer">
       <div class="full-page-overlay"></div>
