--- a/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.html
+++ b/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.html
@@ -29,7 +29,7 @@
 					<img class="download-icon" src="../assets/icons/Download.svg">
 				</div>
 			</header>
-			<main>
+			<main style="overflow: scroll;">
 				<article id="article" class="topSection flex flex-align-center " *ngIf='dataComing && !showLoader'>
 					<div class="events topsection-each">
 						<div class="events-text">Policies Enforced</div>
