--- a/webapp/src/app/shared/data-table/data-table.component.html
+++ b/webapp/src/app/shared/data-table/data-table.component.html
@@ -375,7 +375,7 @@
         class="pointer"
         (click)="rowIndex = -1"
         style="height: 1.3em"
-        src="../assets/png/delete.png"
+        src="../assets/icons/x-icon.svg"
       />
     </div>
     <div class="details-bar-inner flex flex-wrap">
