--- a/webapp/src/app/shared/generic-modal/generic-modal.component.html
+++ b/webapp/src/app/shared/generic-modal/generic-modal.component.html
@@ -15,7 +15,7 @@
 <app-overlay (click)='closeModal();'></app-overlay>
 <div class="fixed flex flex-col generic-modal">
     <div class="absolute close-img" (click)='closeModal();'>
-      <img src='../assets/png/delete.png'>
+      <img src='../assets/icons/x-icon.svg'>
     </div>
     <div class="title-txt no-shink">{{title}}</div>
     <div class="main-container">
