--- a/webapp/src/app/shared/help-text/help-text.component.html
+++ b/webapp/src/app/shared/help-text/help-text.component.html
@@ -14,7 +14,7 @@
 
  <app-overlay (click)='closeModal()'></app-overlay>
 <div class='help-text-modal flex flex-col flex-between'>
-    <div class='close-popup' (click)='closeModal()'><img src='../../assets/png/delete.png'></div>
+    <div class='close-popup' (click)='closeModal()'><img src='../../assets/icons/x-icon.svg'></div>
     <div class='help-content flex flex-between flex-col' *ngIf='errorVal>0'>
         <div class='help-title'>Help </div>
         <div class='qa-wrap'>
