--- a/webapp/src/app/shared/input-modal/input-modal.component.html
+++ b/webapp/src/app/shared/input-modal/input-modal.component.html
@@ -3,7 +3,7 @@
   <div class='flex flex-col content-wrapper'>
     <div class='flex flex-between'>
         <div class="conf-text bold">Add New Field</div>
-        <img class="delete-icon" (click)='cancel();' src='../assets/png/delete.png'>
+        <img class="delete-icon" (click)='cancel();' src='../assets/icons/x-icon.svg'>
     </div>  
     <div class='flex flex-col flex-center flex-align-center form-wrapper' *ngIf="errorValue  == 1">
       <form>
