--- a/webapp/src/app/post-login-app/common/header/header.component.css
+++ b/webapp/src/app/post-login-app/common/header/header.component.css
@@ -119,7 +119,7 @@
 
 .user-logout-modal-btn {
   cursor: pointer;
-  padding: 12px 2px 10px 12px;
+  padding: 6px;
 }
 
 .user-image-wrapper > img {
