--- a/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.css
+++ b/webapp/src/app/post-login-app/stats-overlay/stats-overlay.component.css
@@ -32,19 +32,19 @@
   height: 100%;
   /* background-image: radial-gradient(circle at 50% 50%, #6c8aa2, #20384b);
     */
-  background: url("../../../assets/images/bg/background.png") no-repeat;
+  background: url("/assets/images/statistics-background.svg") no-repeat;
   background-color: var(--background-white);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   background-size: cover;
 }
 
 .event-container {
-  background-color: rgba(29, 65, 95, 0.61);
+  /* background-color: rgba(29, 65, 95, 0.61); */
   min-height: 100vh;
 }
 
 .header {
-  color: #fff;
+  color: var(--text-high-emphasis);
   padding: 0 3em;
   height: 12vh;
 }
@@ -82,15 +82,14 @@
 }
 
 .topSection {
-  color: #fff;
+  color: var(--text-high-emphasis);
   padding: 2em 4em;
-  /* margin-top: 4em; */
   justify-content: space-around;
   height: 42vh;
 }
 
 .bottomSection {
-  color: #fff;
+  color:var(--text-high-emphasis);
   padding: 2em 4em;
   justify-content: space-around;
   height: 46vh;
@@ -154,7 +153,7 @@
   height: 50vh;
   top: 0;
   left: -7.5em;
-  background-color: #d0387e;
+  background-color: var(--primary-400);
   box-shadow: 0 3px 8px 1px rgba(49, 49, 49, 0.5);
   width: 7em;
   display: flex;
@@ -376,8 +375,4 @@
 
 .bottomsection-each {
   height: 17em;
-}
-
-.bg-wrapper {
-  background-color: rgba(0, 0, 0, 0.1);
 }
