--- a/webapp/src/app/landing-page/common/landing-page-header/landing-page-header.component.css
+++ b/webapp/src/app/landing-page/common/landing-page-header/landing-page-header.component.css
@@ -42,7 +42,11 @@
 }
 
 .mr-header-logo-icon {
-  width: 40px;
+  width: 150px;
+  height: 48px;
+  padding: 10px;
+  background-color: var(--background-white);
+  opacity: 0.8;
 }
 
 .mr-login-btn-header {
