--- a/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/aws-resource-details/aws-resource-details.component.css
@@ -12,109 +12,136 @@
  * limitations under the License.
  */
 
-.resource-details-wrapper {
+/* .resource-details-wrapper {
   width: auto;
   height: auto;
+} */
+
+.resource-tiles-container {
+  height: calc(100% - 100px);
+  overflow-y: auto;
+  padding-top: 16px;
 }
 
 .resource-details-container {
-  width: 100%;
-  height: auto;
-  min-height: 27em;
-  border-radius: 5px;
-  background: rgb(221, 226, 233);
+  width: 66%;
+  height: 100%;
+  padding: 16px 28px 16px 28px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
 
-/*chart css*/
-
-.wrapper-container {
-  background-color: #dce3e9;
-  padding: 0.33em;
+.resource-name-type {
+  text-transform: capitalize;
+  font: var(--text-body-2);
+  color: var(--text-high-emphasis);
+  padding-bottom: 10px;
+  border-bottom: 2px solid var(--neutral-200);
 }
 
-.multiline-chart {
-  width: 78%;
-  background-color: var(--background-white);
-  border-radius: 0.4em;
-  box-shadow: 0px 0px 6px #bbb;
+.asset-dist-header {
+  padding: 12px 0px;
+}
+
+.multiline-chart{
+  height: 90%;
+}
+
+app-inventory-container{
+  height: 100%;
+  display: inherit;
+}
+
+.asset-dist-header, .multiline-chart-header {
+  font: var(--text-body-2);
+  color: var(--text-medium-emphasis);
+  padding: 12px 0px;
 }
 
 .tagged {
-  border-radius: 0.4em;
-  box-shadow: 0px 0px 6px #bbb;
-  background-color: var(--background-white);
-  width: 21%;
-}
-
-.wrapper-container-utilization {
-  background-color: #dce3e9;
-  padding: 0.33em;
-}
-
-.wrapper-container-recommendation {
-  background-color: #dce3e9;
-  padding: 0.33em;
-}
-
-.wrapper-parent {
-  padding: 1.42em;
-  background-color: #dce3e9;
-  border-radius: var(--border-radius);
-}
-
-.resource-types-container {
-  position: relative;
-  height: auto;
-  min-height: 9em;
-}
-
-.resource-types-container li.flex {
-  margin: 0 0.7em;
-  position: relative;
-  padding: 0 1px;
-}
-
-.resource-types-container li.flex.active::after {
-  content: "";
-  width: 0.6em;
-  height: 2em;
-  background-color: rgb(221, 226, 233);
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 100%);
-}
-.resource-types-container ul {
-  max-width: 100%;
-  overflow-x: hidden;
-  padding-bottom: 2em;
-  overflow-y: hidden;
   width: 100%;
-  border-right: 1px solid #ededed2f;
-}
-
-.resource-types-container ul:hover {
-  max-width: 100%;
-  overflow-y: hidden;
-  overflow-x: auto;
-  overflow-x: overlay;
-}
-.asset-dist-header {
-  padding: 16px 24px;
-  font-family: ex2-medium;
   background-color: var(--background-white);
-  color: #3f4a59;
-  border-top-left-radius: 0.4em;
-  border-top-right-radius: 0.4em;
-  border-bottom: 0.1em solid #d5dce2;
-  text-transform: capitalize;
-  word-spacing: 2px;
 }
 
-/* css for edge browser */
-@supports (-ms-ime-align: auto) {
-  .resource-types-container ul {
-    overflow-x: auto;
-  }
+.asset-info-container{
+  padding: 20px 0px; 
+  width: 250px;
+}
+
+.no-content {
+  font: var(--text-body-2);
+  color: var(--text-medium-emphasis);
+}
+
+.selected-category{
+  color: #0047BB;
+}
+
+.display-category{
+  max-width: 320px;
+  height: 20px;
+}
+
+.header{
+  padding-right:8px;
+}
+
+.view-all-resources-wrapper {
+  height: calc(100vh - 100px);
+}
+
+.left-section {
+  font: var(--text-body-2);
+  color: var(--text-medium-emphasis);
+  width: 34%;
+  min-width: 250px;
+  padding: 16px 0px 16px 24px;
+}
+
+::ng-deep .view-all-resources-wrapper .mat-select{
+  width: auto;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 8px 12px;
+  width: 310px;
+  height: 36px;
+  background: var(--background-grey);
+  border-radius: 4px;
+  background: #F2F3F5;
+  border:none;
+  max-width: 100%;
+}
+
+.search-bar input{
+  background: none;
+  border: none;
+  padding-left: 8px;
+}
+
+.list-header {
+  width: auto;
+  margin: 0px 12px 0px 0px;
+}
+
+.list-header-wrapper{
+  padding: 0px 10px 4px 0px;
+  width: auto;
+  border-bottom: 1px solid var(--neutral-200);
+}
+
+::ng-deep .mat-form-field-wrapper {
+  padding-bottom: 0px;
+}
+
+.mat-form-field{
+  width: 0px;
+}
+
+::ng-deep .mat-select-arrow-wrapper {
+  vertical-align: top !important;
 }
