modified statistics and login pages

--- a/webapp/src/app/landing-page/home-page/home-page.component.html
+++ b/webapp/src/app/landing-page/home-page/home-page.component.html
@@ -136,7 +136,7 @@
     <app-button
       class="mr-login-btn mr-get-started-btn"
       (onClickInner)="openLoginMenu($event)"
-      >Go to Dashboard
+      >Login
     </app-button>
   </div>
   <div class="mr-each-sec mr-footer-bottom" id="mr-feature-section">
