fix: broken links
fix: know-your-app queryParams

modified static-content.ts file

remodified static-content.ts file

--- a/webapp/src/app/pacman-features/modules/compliance/event-details/event-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/event-details/event-details.component.html
@@ -260,6 +260,7 @@
                     (click)="
                       goToLinkDetails(
                         'compliance',
+                        'issue-listing',
                         'issue-details',
                         autofixData.issueId
                       )
